fix icon alignments

--- a/styles/override-editor.scss
+++ b/styles/override-editor.scss
@@ -518,6 +518,15 @@ body {
 			}
 		}
 	}
+
+	// Tweak inserter block tiles style (a bit larger icon and a bit rounder backdrop).
+	.block-editor-block-types-list__item-icon .block-editor-block-icon svg {
+		transform: scale(1.25);
+	}
+
+	.block-editor-block-types-list__item-icon {
+		border-radius: 0.25rem;
+	}
 }
 
 // WP 5.9 fixes.
@@ -530,18 +539,28 @@ body.branch-5-9 {
 
 // WP 6.1 fixes
 body.branch-6-1 {
+	// Fix label casing.
 	.components-base-control__label {
 		text-transform: none !important;
 		font-size: 0.8125rem !important;
 		font-weight: normal !important;
 	}
 
+	// Fix ToggleControl flex.
 	.components-toggle-control {
 		.components-h-stack {
 			flex-direction: row-reverse !important;
 			align-items: center !important;
 			justify-content: space-between !important;
 		}
+	}
+
+	// Fix block icons being misaligned.
+	.block-editor-block-icon.has-colors svg,
+	.components-button.components-toolbar-button.block-editor-block-parent-selector__button.has-icon .block-editor-block-icon svg,
+	.block-editor-block-toolbar__block-controls .block-editor-block-switcher .components-dropdown-menu__toggle .block-editor-block-icon svg {
+		width: 1.25rem !important;
+		height: 1.25rem !important;
 	}
 }
 
